--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 							</li>
 						
 						   <li class="">
-								<a data-animated="fadeInLeft" data-toggle="tab" href="#tab-panels-94">SMS</a>
+								<a data-animated="fadeInLeft" data-toggle="tab" href="#tab-panels-94">Mobile Plans</a>
 							</li>
 						
                     </ul>
