--- a/index.html
+++ b/index.html
@@ -7784,8 +7784,8 @@
                 <!--Big Column-->
                 <div class="big-column col-md-6 col-sm-12 col-xs-12">
                     <div class="row clearfix">
-                        <!--<!--Footer Column-->
-                        <div class="footer-column col-md-6 col-sm-6 col-xs-12">
+                        <!--Footer Column-->
+                       <!-- <div class="footer-column col-md-6 col-sm-6 col-xs-12">
                             <div class="footer-widget contact-widget">
                                 <h3 class="footer-title">Contact us</h3>
                                 <div class="widget-content">
