Removing about us footer

--- a/index.html
+++ b/index.html
@@ -7723,7 +7723,7 @@
                         
                         <!--Footer Column-->
                         <div class="footer-column col-md-6 col-sm-6 col-xs-12">
-                            <div class="footer-widget about-widget">
+                           <!-- <div class="footer-widget about-widget">
                                 <h3 class="footer-title">About Us</h3>
                                 
                                 <div class="widget-content">
@@ -7736,7 +7736,7 @@
                                     </div>
                                     <div class="link">
                                         <a href="/page/about-us" class="default_link">More About us <i class="fa fa-angle-right"></i></a>
-                                    </div>
+                                    </div>-->
                                 </div>
                             </div>
                         </div>
