--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Home | We Do Cellular</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='shortcut icon' type='image/x-icon' href="/files/001196/gallery/content/logo/wdc.jpg" sizes="32x32">
+    <link rel='shortcut icon' type='image/x-icon' href="/files/001196/resources/theme/0001/logo-30.png" sizes="32x32">
     
     <link rel="stylesheet" type="text/css" media="all" href="/files/001196/resources/theme/0001/jquery-ui.css"/>
     <link rel="stylesheet" type="text/css" media="all" href="/files/001196/resources/theme/0001/bootstrap.min.css"/>
