--- a/index.html
+++ b/index.html
@@ -7873,10 +7873,10 @@
             </div>
             <div class="col-sm-6 info-power get-text">
                 <ul style="display: inline-flex;">
-                    <!-- <li><a href="/page/privacy">Privacy & Policy |</a></li>
-                    <li><a href="/page/terms-conditions"> Terms & Conditions</a></li> -->
+                     <li><a href="/page/privacy.html">Privacy & Policy |</a></li>
+                    <!--<li><a href="/page/terms-conditions.html"> Terms & Conditions</a></li> -->
                     <li><a>Privacy & Policy |</a></li>
-                    <li><a> Terms & Conditions</a></li>
+                   <!---- <li><a> Terms & Conditions</a></li>-->
                 </ul>
             </div>
         </div><!-- /.container -->
